[project]
name = "living-valley-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "types-lxml>=2025.8.25",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.ruff]
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnannotatedClassAttribute = false
reportUnusedCallResult = false
